@@ -8,7 +8,7 @@ public class UniqueKeyDBTable extends AbstractDBTable {
 	}
 
 	public void insert(int id, String data) {
-		Integer key = new Integer(id);
+		Integer key = Integer.valueOf(id);
 		if (select(id) != null) {
 			throw new RuntimeException(ERR_STRING1);
 		}
@@ -16,13 +16,13 @@ public class UniqueKeyDBTable extends AbstractDBTable {
 	}
 
 	public void update(int id, String data) {
-		Integer key = new Integer(id);
+		Integer key = Integer.valueOf(id);
 		if (getImpl().keyExists(key)) {
 			getImpl().put(key, data);
 		}
 	}
 
 	public String select(int id) {
-		return (String) getImpl().get(new Integer(id));
+		return (String) getImpl().get(Integer.valueOf(id));
 	}
 }
